--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,46 +2,34 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]   # Triggers on pushes to main branch
+    branches: [ main ]
   pull_request:
-    branches: [ main ]   # Triggers on PRs targeting main
+    branches: [ main ]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
-      - name: Install Flake8 linter
-        run: pip install flake8
-
-      - name: Run linting
-        run: flake8 .   # Checks code style
+      - run: pip install flake8
+      - run: flake8 .
 
   docker:
-    needs: lint         # Depends on lint job success
+    needs: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3  # <--- Use v3 instead of v1
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5  # <--- Add this missing step
+      - uses: docker/build-push-action@v5
         with:
           context: .
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/your-repo-name:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/your-repo-name:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/ci-test:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/ci-test:${{ github.sha }}
           push: true
